--- a/main/src/app/app.component.html
+++ b/main/src/app/app.component.html
@@ -1,6 +1,13 @@
- <header>
-   <h1>My wonder app with smart apps</h1>
- </header>
+<header>
+  <h1>My App</h1>
+</header>
+<nav>
+  <ul>
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/users">Users</a></li>
+    <li><a routerLink="/products">Products</a></li>
+  </ul>
+</nav>
 <main>
   <router-outlet></router-outlet>
 </main>
