feat: deleted home module

--- a/main/src/app/users/user-view/user-view.component.html
+++ b/main/src/app/users/user-view/user-view.component.html
@@ -1,4 +1,4 @@
-<section>
-  <h1>Users</h1>
-  <iframe [src]="iframeUrl"></iframe>
+<section class="p2">
+  <h3>Users</h3>
+  <iframe class="iframe" [src]="iframeUrl"></iframe>
 </section>
