--- a/main/src/app/app.component.html
+++ b/main/src/app/app.component.html
@@ -1,16 +1,21 @@
-<header>
-  <h1>My App</h1>
+<header class="app-header p-2">
+  <h1 class="app-title">My App</h1>
 </header>
-<nav>
-  <ul>
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/users">Users</a></li>
-    <li><a routerLink="/products">Products</a></li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#" routerLink="/users">Users</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" routerLink="/products">Products</a>
+      </li>
+    </ul>
+  </div>
 </nav>
-<main>
+<main class="main min-vh-100">
   <router-outlet></router-outlet>
 </main>
-<footer>
+<footer class="app-footer">
 
 </footer>
