--- a/main/src/app/products/product-view/product-view.component.html
+++ b/main/src/app/products/product-view/product-view.component.html
@@ -1,4 +1,4 @@
-<section>
-  <h1>Products</h1>
-  <iframe [src]="iframeUrl"></iframe>
+<section class=p-2>
+  <h3>Products</h3>
+  <iframe class="iframe" [src]="iframeUrl"></iframe>
 </section>
