feat: finish integration of child-a app on parent

--- a/parent/src/app/app.component.css
+++ b/parent/src/app/app.component.css
@@ -1,9 +1,14 @@
-.app-header {
+.header {
   width: 100%;
   height: auto;
   background-color: darkorange;
 }
 
-.app-title {
+.title {
   color: white;
 }
+
+.main {
+  min-height:600px;
+}
+
