--- a/parent/src/app/app.component.html
+++ b/parent/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="app-header p-2">
+<header class="header p-1">
   <h1 class="app-title">My App</h1>
 </header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -13,9 +13,8 @@
     </ul>
   </div>
 </nav>
-<main class="main min-vh-100">
+<main class="main">
   <router-outlet></router-outlet>
 </main>
-<footer class="app-footer">
-
+<footer class="footer">
 </footer>
