--- a/parent/src/app/users/user-view/user-view.component.html
+++ b/parent/src/app/users/user-view/user-view.component.html
@@ -1,4 +1,4 @@
-<section class="p2">
+<section class="min-vh-100 p2">
   <h3>Users</h3>
   <iframe class="iframe" [src]="iframeUrl"></iframe>
 </section>
