--- a/parent/src/app/app.component.html
+++ b/parent/src/app/app.component.html
@@ -8,7 +8,7 @@
         <a class="nav-link" href="#" routerLink="/users">Users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" routerLink="/products">Products</a>
+        <a class="nav-link" href="#" routerLink="/posts">Posts</a>
       </li>
     </ul>
   </div>
